Bug 1062609 - Ensure that APZCTreeManager::GetFrameTime respects the test sample time. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D29921